--- a/index.html
+++ b/index.html
@@ -13,7 +13,9 @@
         <meta name="description" content="Welcome to my portfolio. I am a developer.">
         <meta name="keywords" content="Rishabh Shah, Rishabh Shah Portfolio, developer, java, python, html, css, javascript, app developer, portfolio">
 
-        <link href="https://fonts.googleapis.com/css?family=Nunito" rel="stylesheet">
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css?family=Poppins" rel="stylesheet">
 
         <link rel="stylesheet"
             href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"
