Added portfolio prefix

--- a/projects.html
+++ b/projects.html
@@ -223,17 +223,17 @@
                     <span class="copyright"><i class="fas fa-copyright"></i>2000</span>
                 </div>
                 <div class="footer-column">
-                    <a href="/about.html" class="footer-button">
+                    <a href="/portfolio/about.html" class="footer-button">
                         <img src="./img/smile.svg" alt="Smile Icon">
                         About
                     </a>
-                    <a href="/projects" class="footer-button">
+                    <a href="/portfolio/projects" class="footer-button">
                         <img src="./img/coding.svg" alt="Code Icon">
                         Projects
                     </a>
                 </div>
                 <div class="footer-column">
-                    <a href="/RishabhShah.pdf" class="footer-button">
+                    <a href="/portfolio/RishabhShah.pdf" class="footer-button">
                         <img src="./img/resume.svg" alt="Resume Icon">
                         Resume
                     </a>
